--- a/trunk/JMCNetMongoFlex_Test/src/FlexUnitApplication.mxml
+++ b/trunk/JMCNetMongoFlex_Test/src/FlexUnitApplication.mxml
@@ -10,11 +10,13 @@
 	<fx:Script>
 		<![CDATA[
 			import junit.MongoDriverTest;
+			import org.flexunit.runner.Request;
 			
 			public function currentRunTestSuite():Array
 			{
 				var testsToRun:Array = new Array();
-				testsToRun.push(junit.MongoDriverTest);
+				
+				testsToRun.push(Request.methods(junit.MongoDriverTest,["testComplexObject"]));
 				return testsToRun;
 			}
 			
