--- a/JMCNetMongoFlex_Test/src/FlexUnitApplication.mxml
+++ b/JMCNetMongoFlex_Test/src/FlexUnitApplication.mxml
@@ -10,35 +10,11 @@
 	<fx:Script>
 		<![CDATA[
 			import junit.MongoDriverTest;
-			import org.flexunit.runner.Request;
 			
 			public function currentRunTestSuite():Array
 			{
 				var testsToRun:Array = new Array();
-				
-				testsToRun.push(Request.methods(junit.MongoDriverTest,["testComplexDocumentToObject",
-					"testMongoMsgHeader",
-					"testMongoMsgInsert",
-					"testHelperByteArraySimple",
-					"testHelperByteArrayObject",
-					"testMongoDocumentQuery",
-					"testMongoMsgQuery",
-					"testMongoMsgUpdate",
-					"testBSONDecoder",
-					"testGetObjectAttributes",
-					"testDocumentToObject",
-					"testBSONEncoderBoolean",
-					"testComplexObject",
-					"testObjectIDFromByte",
-					"testOrderBy",
-					"testOrderByReturnFields",
-					"testBSONEncoderObject",
-					"testAuthenticationNok",
-					"testBSONEncoderSimpleObject",
-					"testBSONEncoderString",
-					"testBSONEncoderNumber",
-					"testBSONEncoderInt",
-					"testBSONEncoderDate"]));
+				testsToRun.push(junit.MongoDriverTest);
 				return testsToRun;
 			}
 			
