--- a/JMCNetMongoFlex_Test/src/FlexUnitApplication.mxml
+++ b/JMCNetMongoFlex_Test/src/FlexUnitApplication.mxml
@@ -9,16 +9,14 @@
 			   minWidth="955" minHeight="600" creationComplete="onCreationComplete()">
 	<fx:Script>
 		<![CDATA[
-			import junit.MongoDriverTest;
 			import junit.MongoDBRefTest;
-			import junit.MongoAggregationTest;
+			import org.flexunit.runner.Request;
 			
 			public function currentRunTestSuite():Array
 			{
 				var testsToRun:Array = new Array();
-				testsToRun.push(junit.MongoAggregationTest);
-				testsToRun.push(junit.MongoDBRefTest);
-				testsToRun.push(junit.MongoDriverTest);
+				
+				testsToRun.push(Request.methods(junit.MongoDBRefTest,["testFetchDocError"]));
 				return testsToRun;
 			}
 			
