--- a/trunk/JMCNetMongoFlex_Test/src/FlexUnitApplication.mxml
+++ b/trunk/JMCNetMongoFlex_Test/src/FlexUnitApplication.mxml
@@ -10,13 +10,11 @@
 	<fx:Script>
 		<![CDATA[
 			import junit.MongoDBRefTest;
-			import org.flexunit.runner.Request;
 			
 			public function currentRunTestSuite():Array
 			{
 				var testsToRun:Array = new Array();
-				
-				testsToRun.push(Request.methods(junit.MongoDBRefTest,["testFetchDocError"]));
+				testsToRun.push(junit.MongoDBRefTest);
 				return testsToRun;
 			}
 			
